# indecision

./: .gitignore  README.md  flake.nix  pyproject.toml
notebooks/: Fatigued-Interference.ipynb  Frenkel 2011.ipynb  Untitled.ipynb  frenkel-2011-marimo.py  frenkel-2011-rust.ipynb  frenkel-2011.py  pyproject.toml  rust-tests.py
rust/: .gitignore  Cargo.toml  README.md  pyproject.toml
rust/examples/: frenkel-2011.rs
rust/src/: lib.rs
rust/src/indecision_rs/: __init__.py  core.pyi  particle.py  simulate.py
rust/src/particle/: entering.rs  fatiguing.rs  interfering.rs  mod.rs  mono_ligand.rs  multi_ligand.rs  walker.rs
rust/src/simulation/: many.rs  markov.rs  mod.rs  single.rs
src/: main.py  particle.py  system.py
src/indecision/: __init__.py
src/indecision/particle/: __init__.py  core.py  mono_ligand.py  multi_ligand.py
src/indecision/simulation/: __init__.py  convergence.py
src/particle/: __init__.py  core.py  mono_ligand.py  multi_ligand.py
src/simulation/: __init__.py
