[project]
name = "indecision"
version = "0.1.0"
description = "Modeling of highly selective or un-selective nano-particles"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
