[project]
name = "indecision-notebooks"
version = "0.1.0"
description = "Notebooks for exploring indecision"
requires-python = ">=3.13"
dependencies = [
    "indecision",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
]

[tool.uv.sources]
indecision = { path = "../", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
