[package]
name = "indecision_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib", "rlib"]

[dependencies]
color-eyre = "0.6.3"
rand = "0.8.5"
pyo3 = { version = "0.23.2", features = ["extension-module"] }
numpy = "0.23.0"
pyo3-stub-gen = { git = "https://github.com/Jij-Inc/pyo3-stub-gen.git" }
env_logger = "0.11.5"
rayon = "1.10.0"
ndarray = "0.16.1"
rust-numpy = "0.1.0"
pyo3-log = "0.12.1"
log = "0.4.22"
derive_more = { version = "1", features = ["display"] }
# pyo3_special_method_derive = "0.4.2"

[build-dependencies]
pyo3-build-config = "0.23.2"

[[bin]]
name = "stub_gen"
doc = false
