[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "indecision_rs"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "MIT"

[dependency-groups]
dev = ["maturin>=1.7.6"]

[tool.maturin]
module-name = "indecision_rs.core"
python-packages = ["indecision_rs"]
python-source = "src"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]
